legend-engine-rust/crates/protocol/tests/snapshots/snapshot_tests__arithmetic_expression.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 437
expression: json
---
{
  "_type": "func",
  "function": "plus",
  "parameters": [
    {
      "_type": "integer",
      "sourceInformation": {
        "endColumn": 1,
        "endLine": 1,
        "sourceId": "test.pure",
        "startColumn": 1,
        "startLine": 1
      },
      "value": 1
    },
    {
      "_type": "integer",
      "sourceInformation": {
        "endColumn": 5,
        "endLine": 1,
        "sourceId": "test.pure",
        "startColumn": 5,
        "startLine": 1
      },
      "value": 2
    }
  ],
  "sourceInformation": {
    "endColumn": 5,
    "endLine": 1,
    "sourceId": "test.pure",
    "startColumn": 1,
    "startLine": 1
  }
}
