legend-engine-rust/crates/protocol/tests/snapshots/snapshot_tests__enumeration.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 219
expression: json
---
{
  "_type": "Enumeration",
  "name": "Color",
  "package": "model",
  "sourceInformation": {
    "endColumn": 1,
    "endLine": 5,
    "sourceId": "test.pure",
    "startColumn": 1,
    "startLine": 1
  },
  "values": [
    {
      "value": "RED"
    },
    {
      "value": "GREEN"
    },
    {
      "stereotypes": [
        {
          "profile": "doc",
          "value": "deprecated"
        }
      ],
      "value": "BLUE"
    }
  ]
}
