legend-engine-rust/crates/protocol/tests/snapshots/snapshot_tests__literal_datetime.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 750
expression: json
---
{
  "_type": "dateTime",
  "value": "2024-01-15T10:30:00.000Z"
}
