legend-engine-rust/crates/protocol/tests/snapshots/snapshot_tests__literal_float.snap
---
source: crates/protocol/tests/snapshot_tests.rs
assertion_line: 750
expression: json
---
{
  "_type": "float",
  "value": 2.72
}
